// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> default should render a radio only without title, helptext/errortext 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> defaultValue should render radio checked(attr) as true if defaultValue(prop) is provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> defaultValue should render radio input with checked(attr) as false if defaultValue(prop) is not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          class="Inputweb__Input-sc-1i0wmdd-0 gzkdxE"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 bmRtlT Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> disabled should render a disabled radio input if disabled is true 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 dZKTTu Flexweb__Flex-sc-10onnkk-0 cQZIzK"
        disabled=""
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 jZDTwT"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hhdmbF Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(22, 47, 86, 0.10)"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 iGlNrc Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 jhtmmG Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> errorText should render radio with provided errorText 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
      <div
        class="Textweb__Text-sc-1qdvl51-0 hLYWLn Spaceweb__Space-sc-1fdjx97-0 iqEsr"
        color="negative.900"
        data-testid="ds-text"
      >
        This is some sample error text.
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with defaultValue(uncontrolled) should render focus styles on radio when radio is checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with defaultValue(uncontrolled) should render focus styles on radio when radio is not checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          class="Inputweb__Input-sc-1i0wmdd-0 gzkdxE"
          data-testid="ds-radio-button"
          type="radio"
          value="2"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 bmRtlT Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with value(controlled) should render focus styles on radio when radio is checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with value(controlled) should render focus styles on radio when radio is not checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          class="Inputweb__Input-sc-1i0wmdd-0 gzkdxE"
          data-testid="ds-radio-button"
          type="radio"
          value="2"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 bmRtlT Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> helpText should render radio with provided helpText 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
      <div
        class="Textweb__Text-sc-1qdvl51-0 bJUMcv Spaceweb__Space-sc-1fdjx97-0 iqEsr"
        color="shade.950"
        data-testid="ds-text"
      >
        This is some sample help text.
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a large radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 haIKAT Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 exrpwb Sizeweb__Size-ej4iby-0 gaKAwD"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 EcvXr"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 diSxms Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a medium radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a small radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 eFJXjr Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 fjPyjF Sizeweb__Size-ej4iby-0 kvrVBj"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eYYJRP"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 fXWXRm Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> title should render radio with provided title 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        >
          Radio Button
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> value should render radio input checked(attr) as true if value(prop) is provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 dZKTTu Flexweb__Flex-sc-10onnkk-0 cQZIzK"
        disabled=""
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 jZDTwT"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hhdmbF Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(22, 47, 86, 0.10)"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 iGlNrc Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 jhtmmG Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> value should render radio input with checked(attr) as false if value(prop) is not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 dZKTTu Flexweb__Flex-sc-10onnkk-0 cQZIzK"
        disabled=""
      >
        <input
          class="Inputweb__Input-sc-1i0wmdd-0 jZDTwT"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hhdmbF Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(22, 47, 86, 0.10)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 jhtmmG Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> variantColor should render a radio with default variantColor if variantColor not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 dUpPhA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 hQXkfl Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 goqFng Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> variantColor should render a radio with provided variantColor 1`] = `
<div>
  <fieldset
    class="RadioGroup-pevomc-0 bpfjzD"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 junxMN"
    >
      <label
        class="Viewweb__View-sc-11897uc-0 Labelweb__Label-tyttvh-0 hcAeSs Flexweb__Flex-sc-10onnkk-0 cQZIzK"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1i0wmdd-0 jEZbTL"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-11897uc-0 Backdropweb__Backdrop-sc-1rvfkgs-0 ZRKGn Sizeweb__Size-ej4iby-0 lcCeL Flexweb__Flex-sc-10onnkk-0 jVfYS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 Circleweb__Circle-sc-1gcexwz-0 bAFyyZ Sizeweb__Size-ej4iby-0 kbGYkn"
            color="rgba(52, 74, 108, 1.0)"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Dotweb__Dot-nsw858-0 gsRIMo Sizeweb__Size-ej4iby-0 eGdwbH"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 fuwDeJ"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;
